--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build": "NODE_ENV=production webpack --config webpack.config.production.js",
+    "build": "NODE_ENV=production webpack --config webpack.config.production.js && cp ./index.html dist/index.html",
+    "rebuild": "npm run clean && npm run build",
     "lint": "eslint --ext .js,.jsx .",
-    "deploy": "npm run clean & npm run build && surge -p .",
+    "deploy": "npm run rebuild && git subtree push --prefix dist origin gh-pages",
     "start": "NODE_ENV=development node server.js"
   },
   "author": "",
